--- a/typescript/graphql-nexus/tsconfig.json
+++ b/typescript/graphql-nexus/tsconfig.json
@@ -6,9 +6,9 @@
     "sourceMap": true,    
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "moduleResolution": "node",
+    "module": "commonjs",
     "rootDir": "src",
-    "outDir": "lib",
+    "outDir": "dist",
     "typeRoots": ["node_modules/@types", "src/typings", "generated", "generated/fujix"],
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
